stop forms index created_at column from wrapping

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -335,6 +335,9 @@ body{
     tr:last-child td{
       padding-bottom: 10px;
     }
+    .created_at_column{
+      width: 150px;
+    }
   }
   tfoot, thead{
     background: #E1E1E1;
